product-api_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: product-api
  data: 
    appsettings.json: |-
    {
      "ConnectionStrings": {
        "MongoDb": {
          "Uri": "mongodb://mongo-container:27017",
          "DatabaseName": "PetFriends"
        }
      }
    }
spec:
  volumes:
    - name: product-api-json
      configMap:
        name: product-api
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: mirlock/product-api:latest
        ports:
          - containerPort: 7001
        volumeMounts:
          - name: product-api-json
            mountPath: /Product.Api/appsettings.json
            subPath: appsettings.json
