product-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-api
 
spec:
  selector:
    app: product-api
 
  type: ClusterIP
  ports:
    - port: 7001
      targetPort: 7001
